Fix hidden overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2108,9 +2108,6 @@ li.cartProductPrice {
   }
 
   /* Slides */
-  .slides {
-    overflow-y: hidden;
-  }
   .slide-indicators {
     bottom: 165px;
   }
